tests/latch/static/failing/rtexviewer.wat
version https://git-lfs.github.com/spec/v1
oid sha256:48e31c3b92cf1646054a2bb209dcecc3add97d08797cb7c06f305e630752fa9a
size 4275763
